# job-xiaomi

./: .gitignore  A2A_README.md  README.md  a2a_sample.py  fastapi_wrapper.py  google_a2a_sample.py  mcp_config.json  pyproject.toml  sample-query.py  xiaomi-search.py  xiaomi_jobs_mcp.py
