[project]
name = "xiaomi-jobs"
version = "0.1.0"
description = "Xiaomi Jobs MCP Server"
readme = "README.md"
requires-python = ">=3.11"
dependencies = []

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
# Include all Python files in the root directory
include = [
    "*.py",
    "*.md",
    "*.txt"
]
